fix: Blurry image in Chrome

--- a/assets/app.css
+++ b/assets/app.css
@@ -3,11 +3,9 @@
 @import "tailwindcss/utilities";
 
 .h-screen-alt {
-  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
 }
 
-.vh-60 {
-  height: 60vh;
-  height: calc(var(--vh, 1vh) * 60);
+img {
+  image-rendering: -webkit-optimize-contrast;
 }
